--- a/client/src/app/nav/nav.component.html
+++ b/client/src/app/nav/nav.component.html
@@ -14,10 +14,14 @@
         <a routerLink="/messages" routerLinkActive="active" class="nav-link">Messages</a>
       </li>
       }
+      <li class="nav-item">
+        <a routerLink="/errors" routerLinkActive="active" class="nav-link">Errors</a>
+      </li>
     </ul>
     @if(accountService.currentUser()){
     <div dropdown class="dropdown">
-      <a dropdownToggle class="dropdown-toggle text-light">Welcome {{accountService.currentUser()?.username | titlecase}}</a>
+      <a dropdownToggle class="dropdown-toggle text-light">Welcome {{accountService.currentUser()?.username |
+        titlecase}}</a>
       <div *dropdownMenu class="dropdown-menu">
         <a class="dropdown-item">Edit profile</a>
         <div class="dropdown-divider"></div>
